# backend/openapi.yaml
@@ -229,11 +229,6 @@ paths:
           required: true
           schema:
             type: integer
-        - name: bulan
-          in: query
-          required: true
-          schema:
-            type: integer
       responses:
         '200':
           description: Anggaran tree data
